Swagger test CRUD
