# index.js
@@ -1,23 +1,28 @@
 const express = require('express');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
+
+// Import Routes
 const productRoutes = require('./routes/productRoutes');
 const orderRoutes = require('./routes/orderRoutes');
 const authRoutes = require('./routes/authRoutes');
 const dashboardRoutes = require('./routes/dashboardRoutes');
-
+const tableRoutes = require('./routes/tableRoutes');
+const categoryRoutes = require('./routes/categoryRoutes');
 
 const app = express();
 app.use(express.json());
 
-// Langsung gunakan swaggerDocument tanpa swagger-jsdoc
+// Swagger
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-app.use('/api', productRoutes);
-app.use('/api', orderRoutes);
-app.use('/api/dashboard', dashboardRoutes);
+// API Routes (Prefix disesuaikan agar sesuai dengan swagger.json)
 app.use('/api/auth', authRoutes);
-
+app.use('/api/products', productRoutes);
+app.use('/api/orders', orderRoutes);
+app.use('/api/tables', tableRoutes);
+app.use('/api/categories', categoryRoutes);
+app.use('/api/dashboard', dashboardRoutes);
 
 app.get('/ping', (req, res) => res.send('Server Berhasil Hidup!'));
 
